[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/scenes/GameScene.gd" type="Script" id=1]
[ext_resource path="res://content/ui/GameControll.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/ui/UpgradeControll.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ui/ColorFiller.gd" type="Script" id=4]
[ext_resource path="res://content/ui/Settings.tscn" type="PackedScene" id=7]

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorFiller" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.227451, 0.227451, 0.858824 )
script = ExtResource( 4 )

[node name="Menu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainContainer" type="MarginContainer" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="GameControll" parent="CanvasLayer/Menu/MainContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="UpgradeControll" parent="CanvasLayer/Menu/MainContainer" instance=ExtResource( 3 )]

[node name="Settings" parent="CanvasLayer/Menu/MainContainer" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
